# cmake-diamond

./: Makefile  README.md
A/: CMakeLists.txt
A/include/A/: a.h
A/src/: a.cpp
B_dependingOnA/: CMakeLists.txt
B_dependingOnA/include/B/: b.h
B_dependingOnA/src/: b.cpp
C_dependingOnA/: CMakeLists.txt
C_dependingOnA/include/C/: c.h
C_dependingOnA/src/: c.cpp
D_dependingOnBC/: CMakeLists.txt
D_dependingOnBC/include/D/: d.h
D_dependingOnBC/src/: d.cpp
